--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,32 +8,38 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">login suite</th></tr>
-<tr><td><a href="#t0">Client Search Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">21,710</td><td></td><td></td></tr>
+<tr><th colspan="8">Logintestsuite</th></tr>
+<tr><td><a href="#t0">Login test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">58,710</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">login suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Client Search Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC007_AddMembershipTest</td><td><a href="#m0">verifyAddMembership</a></td><td rowspan="1">1736105091852</td><td rowspan="1">7195</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Logintestsuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC005_LoginTest</td><td><a href="#m0">verifyLoginWithValid</a></td><td rowspan="1">1739624766916</td><td rowspan="1">21337</td></tr><tr><th colspan="4">Login test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC006_LoginWithInvalid</td><td><a href="#m1">verifyLoginWithInvalid</a></td><td rowspan="1">1739624802825</td><td rowspan="1">2744</td></tr></tbody>
 </table>
-<h2>Client Search Test</h2><h3 id="m0">testCases.TC007_AddMembershipTest#verifyAddMembership</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;span&gt;...&lt;/span&gt; is not clickable at point (297, 165). Other element would receive the click: &lt;li class=&quot;MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-17pxts6&quot; tabindex=&quot;-1&quot; role=&quot;option&quot; aria-selected=&quot;false&quot; data-value=&quot;67495f7644535426e2a3ec95&quot;&gt;...&lt;/li&gt;
-  (Session info: chrome=131.0.6778.109)
-Build info: version: &apos;4.27.0&apos;, revision: &apos;d6e718d134&apos;
+<h2>Login test</h2><h3 id="m0">testCases.TC005_LoginTest#verifyLoginWithValid</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//body/div[@id=&apos;root&apos;]/div[@class=&apos;d-flex vh-100 overflow-hidden w-100&apos;]/section[@class=&apos;main-page pageBg flex-grow-0 flex-shrink-0 notFullWided&apos;]/header[@class=&apos;d-flex flex-wrap justify-content-end mainHeader&apos;]/div[@class=&apos;space-3 px-3 d-flex align-items-center&apos;]/div[5]/a[1]&quot;}
+  (Session info: chrome=132.0.6834.160)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.28.0&apos;, revision: &apos;ac342546e9&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.24&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [5c8dc6365e47b1e4f08a0502b7bdd46c, clickElement {id=f.4FAD4C407FDA902C3025AAB38630F92D.d.BCE3880036D919C1B14913ECAE774C00.e.250}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 131.0.6778.109, chrome: {chromedriverVersion: 131.0.6778.204 (52183f9e99a..., userDataDir: C:\Users\DELL\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58212}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58212/devtoo..., se:cdpVersion: 131.0.6778.109, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (5c8dc6365e47b1e4f08a0502b7bdd46c)] -&gt; xpath: //ul/li/span[contains(text(), &apos;One month&apos;)]]
-Session ID: 5c8dc6365e47b1e4f08a0502b7bdd46c
+Command: [8982f08c5ae8087725a602dc5e64cc59, findElement {value=//body/div[@id=&apos;root&apos;]/div[@class=&apos;d-flex vh-100 overflow-hidden w-100&apos;]/section[@class=&apos;main-page pageBg flex-grow-0 flex-shrink-0 notFullWided&apos;]/header[@class=&apos;d-flex flex-wrap justify-content-end mainHeader&apos;]/div[@class=&apos;space-3 px-3 d-flex align-items-center&apos;]/div[5]/a[1], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 132.0.6834.160, chrome: {chromedriverVersion: 132.0.6834.159 (2d77d3fc445..., userDataDir: C:\Users\DELL\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52650}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52650/devtoo..., se:cdpVersion: 132.0.6834.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 8982f08c5ae8087725a602dc5e64cc59
 	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
-	at pageObjects.AddMembershipPage.selectValidityPeriod(AddMembershipPage.java:63)
-	at testCases.TC007_AddMembershipTest.verifyAddMembership(TC007_AddMembershipTest.java:31)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
+	at com.sun.proxy.$Proxy30.isDisplayed(Unknown Source)
+	at pageObjects.HomePage.isAdminDisplayed(HomePage.java:46)
+	at testCases.TC005_LoginTest.verifyLoginWithValid(TC005_LoginTest.java:25)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.TC006_LoginWithInvalid#verifyLoginWithInvalid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
