--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,38 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Logintestsuite</th></tr>
-<tr><td><a href="#t0">Login test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">58,710</td><td></td><td></td></tr>
+<tr><th colspan="8">clients suite</th></tr>
+<tr><td><a href="#t0">add client test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">60,875</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Logintestsuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.TC005_LoginTest</td><td><a href="#m0">verifyLoginWithValid</a></td><td rowspan="1">1739624766916</td><td rowspan="1">21337</td></tr><tr><th colspan="4">Login test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC006_LoginWithInvalid</td><td><a href="#m1">verifyLoginWithInvalid</a></td><td rowspan="1">1739624802825</td><td rowspan="1">2744</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">clients suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">add client test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC008_EditClientTest</td><td><a href="#m0">VerifyEditClientWithValidData</a></td><td rowspan="1">1742124158802</td><td rowspan="1">52011</td></tr></tbody>
 </table>
-<h2>Login test</h2><h3 id="m0">testCases.TC005_LoginTest#verifyLoginWithValid</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//body/div[@id=&apos;root&apos;]/div[@class=&apos;d-flex vh-100 overflow-hidden w-100&apos;]/section[@class=&apos;main-page pageBg flex-grow-0 flex-shrink-0 notFullWided&apos;]/header[@class=&apos;d-flex flex-wrap justify-content-end mainHeader&apos;]/div[@class=&apos;space-3 px-3 d-flex align-items-center&apos;]/div[5]/a[1]&quot;}
-  (Session info: chrome=132.0.6834.160)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.28.0&apos;, revision: &apos;ac342546e9&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.24&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [8982f08c5ae8087725a602dc5e64cc59, findElement {value=//body/div[@id=&apos;root&apos;]/div[@class=&apos;d-flex vh-100 overflow-hidden w-100&apos;]/section[@class=&apos;main-page pageBg flex-grow-0 flex-shrink-0 notFullWided&apos;]/header[@class=&apos;d-flex flex-wrap justify-content-end mainHeader&apos;]/div[@class=&apos;space-3 px-3 d-flex align-items-center&apos;]/div[5]/a[1], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 132.0.6834.160, chrome: {chromedriverVersion: 132.0.6834.159 (2d77d3fc445..., userDataDir: C:\Users\DELL\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52650}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52650/devtoo..., se:cdpVersion: 132.0.6834.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 8982f08c5ae8087725a602dc5e64cc59
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at com.sun.proxy.$Proxy30.isDisplayed(Unknown Source)
-	at pageObjects.HomePage.isAdminDisplayed(HomePage.java:46)
-	at testCases.TC005_LoginTest.verifyLoginWithValid(TC005_LoginTest.java:25)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.TC006_LoginWithInvalid#verifyLoginWithInvalid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>add client test</h2><h3 id="m0">testCases.TC008_EditClientTest#VerifyEditClientWithValidData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
