--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testCases.TC004_PaymentTest.verifyMembershipPayment</td></tr>
+<tr><td>testCases.TC008_EditClientTest.verifyEditClient</td></tr>
 </table>
