--- a/test-output/old/clients suite/methods-alphabetical.html
+++ b/test-output/old/clients suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>clients suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dba768">  <td>25/02/02 15:28:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC008_EditClientTest.VerifyEditClientWithValidData()[pri:0, instance:testCases.TC008_EditClientTest@30ea8c23]">VerifyEditClientWithValidData</td> 
-  <td>main@1556520190</td>   <td></td> </tr>
-<tr bgcolor="b7c287">  <td>25/02/02 15:28:02</td>   <td>-11286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC008_EditClientTest@30ea8c23]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556520190</td>   <td></td> </tr>
-<tr bgcolor="b7c287">  <td>25/02/02 15:29:02</td>   <td>49093</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC008_EditClientTest@30ea8c23]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556520190</td>   <td></td> </tr>
+<tr bgcolor="a3b183">  <td>25/03/16 14:22:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC008_EditClientTest.VerifyEditClientWithValidData()[pri:0, instance:testCases.TC008_EditClientTest@6273c5a4]">VerifyEditClientWithValidData</td> 
+  <td>main@1175418534</td>   <td></td> </tr>
+<tr bgcolor="748470">  <td>25/03/16 14:22:30</td>   <td>-8649</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC008_EditClientTest@6273c5a4]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1175418534</td>   <td></td> </tr>
+<tr bgcolor="748470">  <td>25/03/16 14:23:30</td>   <td>52017</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC008_EditClientTest@6273c5a4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1175418534</td>   <td></td> </tr>
 </table>
